<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMPSTR</string>
    <string name="location_chip_local">Playing in %1$s</string>
    <string name="location_chip_locale">Using device region</string>
    <string name="location_chip_off">Local words off</string>
    <string name="location_prompt_title">Make words more relevant?</string>
    <string name="location_prompt_body">Allow approximate location so Random mode uses everyday words people around you actually know. IMPSTR only keeps your country, never GPS.</string>
    <string name="location_prompt_allow">Use approximate location</string>
    <string name="location_prompt_skip">Not now</string>
    <string name="location_sheet_title">Local words</string>
    <string name="location_refresh">Refresh words</string>
    <string name="category_suggested">Suggested for you</string>
    <string name="category_all">All categories</string>
    <string name="random_words_hint">Everyday words, tuned to your region</string>
    <string name="random_words_hint_short">Tuned to your region</string>
    <string name="catalog_updating">Updating word list…</string>
    <string name="start_game">Start Game</string>
    <string name="mode_stealth">Stealth</string>
    <string name="mode_normal">Normal</string>
    <string name="label_players">Players</string>
    <string name="label_imposters">Imposters</string>
    <string name="label_category">Category</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_shuffle_players">Shuffle Players</string>
    <string name="cd_decrease">Decrease</string>
    <string name="cd_increase">Increase</string>
    <string name="cd_decrease_imposters">Decrease Imposters</string>
    <string name="cd_increase_imposters">Increase Imposters</string>
    <string name="cd_remove_player">Remove Player</string>
    <string name="cd_edit_name">Edit Name</string>
    <string name="cd_back">Back</string>
    <string name="cd_help">Help</string>
    <string name="host_badge">HOST</string>
    <string name="configure_players">Configure Players</string>
    <string name="number_of_players">Number of Players</string>
    <string name="number_of_imposters">Number of Imposters</string>
    <string name="action_done">Done</string>
    <string name="select_category">Select Category</string>
    <string name="rename_player">Rename Player</string>
    <string name="player_name">Player Name</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="hold_to_move">Hold to move</string>
    <string name="reveal_pass_to">Pass the phone to</string>
    <string name="reveal_memorize">Memorize your secret</string>
    <string name="reveal_tap">TAP TO REVEAL</string>
    <string name="reveal_you_are">YOU ARE THE</string>
    <string name="reveal_imposter">IMPOSTER</string>
    <string name="reveal_secret_is">THE SECRET WORD IS</string>
    <string name="action_reveal_role">Reveal Role</string>
    <string name="action_next_player">Next Player</string>
    <string name="action_start_discussion">Start Discussion</string>
    <string name="discussion_phase">DISCUSSION PHASE</string>
    <string name="discussion_hint">Talk with your friends to find the imposter.\nKeep it civil!</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="proceed_to_voting">Proceed to Voting</string>
    <string name="voting_phase">VOTING PHASE</string>
    <string name="voting_who">Who is the\nImposter?</string>
    <string name="voting_select_many">Select %1$d\nto Eliminate</string>
    <string name="skip_vote">Skip Vote</string>
    <string name="submit_vote">Submit Vote</string>
    <string name="status_eliminated">ELIMINATED</string>
    <string name="status_alive">Alive</string>
    <string name="voting_results">VOTING RESULTS</string>
    <string name="nobody_kicked">Nobody got\nkicked out</string>
    <string name="players_ejected">%1$d Player(s)\nEjected</string>
    <string name="skipped_vote">Skipped vote</string>
    <string name="next_round">Next Round</string>
    <string name="end_game">End Game</string>
    <string name="see_game_results">See Game Results</string>
    <string name="imposter_identified">Imposter identified</string>
    <string name="was_not_imposter">Was not an Imposter</string>
    <string name="play_again">Play Again</string>
    <string name="secret_word_was">THE SECRET WORD WAS</string>
    <string name="imposter_word_was">IMPOSTER\'S WORD WAS</string>
    <string name="category_prefix">Category: %1$s</string>
    <string name="elimination_history">Elimination History</string>
    <string name="crewmates_win">Crewmates Win!</string>
    <string name="imposter_wins">Imposter Wins!</string>
    <string name="the_imposter_was">The Imposter was</string>
    <string name="the_imposters_were">The Imposters were</string>
    <string name="how_to_play">How to Play</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="exit_game">Exit Game?</string>
    <string name="exit_progress_lost">Current game progress will be lost.</string>
    <string name="resume_game">Resume Game</string>
    <string name="go_to_lobby">Go to Lobby</string>
    <string name="close_game">Close Game</string>
    <string name="close_app_confirm">Are you sure you want to close the app?</string>
</resources>
